--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,8 +1,9 @@
 parserOptions:
-    ecmaVersion: 2020
+    ecmaVersion: 2022
     sourceType: module
 
 env:
     es2020: true
+    node: true
 
 extends: eslint:recommended
