--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "@victorenator/babel-plugin-esm-resolver",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "ESM Resolver for Babel",
     "type": "module",
     "module": "index.js",
+    "main": "index.js",
     "devDependencies": {
-        "@babel/core": "^7.15.5",
-        "eslint": "^7.32.0",
-        "mocha": "^9.1.2"
+        "@babel/core": "^7.16.12",
+        "eslint": "^8.8.0",
+        "mocha": "^9.2.0"
     },
     "repository": {
         "type": "git",
