--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "@victorenator/babel-plugin-esm-resolver",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "ESM Resolver for Babel",
     "type": "module",
     "module": "index.js",
     "main": "index.js",
+    "peerDependencies": {
+        "@babel/core": "^7.19.6"
+    },
     "devDependencies": {
-        "@babel/core": "^7.16.12",
-        "eslint": "^8.8.0",
-        "mocha": "^9.2.0"
+        "@babel/core": "^7.19.6",
+        "eslint": "^8.25.0"
     },
     "repository": {
         "type": "git",
@@ -19,6 +21,6 @@
     ],
     "license": "MIT",
     "engines": {
-        "node": ">=14"
+        "node": ">=18.11.0"
     }
 }
