--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@victorenator/babel-plugin-esm-resolver",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "ESM Resolver for Babel",
     "type": "module",
     "module": "index.js",
@@ -10,7 +10,9 @@
     },
     "devDependencies": {
         "@babel/core": "^7.19.6",
-        "eslint": "^8.25.0"
+        "@eslint/js": "^9.13.0",
+        "eslint": "^9.13.0",
+        "globals": "^15.11.0"
     },
     "repository": {
         "type": "git",
